--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "ipaddr.js": "^2.3.0",
     "jsonwebtoken": "^9.0.3",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
+    "otplib": "^13.3.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
-    "ws": "^8.14.2"
+    "qrcode": "^1.5.4",
+    "ws": "^8.14.2",
+    "xss": "^1.0.15"
   },
   "engines": {
     "node": ">=16.0.0"
